# ComputeShaderPrototype

./: .gitignore  .gitmodules  CMakeLists.txt  GeneralPropertySheet.props  OpenGL-Compute-General.vcxproj  OpenGL-Compute-General.vcxproj.filters  OpenGL-Compute.sln  OpenGL-Compute.vcxproj  OpenGL-Compute.vcxproj.filters  README.md
demos/Rigid-Body-Simulator/: Application.cpp  Application.h  CMakeLists.txt  Rigid-Body-Simulator.vcxproj  Rigid-Body-Simulator.vcxproj.filters  imgui.ini  main.cpp
ext/: CMakeLists.txt
lib/P3Engine/: P3Engine.h  P3Engine.lib  P3Engine.vcxproj  P3Engine.vcxproj.filters
lib/RenderLib/: RenderLib.lib  RenderLib.vcxproj  RenderLib.vcxproj.filters
notes/: SomeThoughts.txt
resources/: compute.glsl
resources/shaders/: assignMortonCodes.comp  broadPhase.comp  buildParallelLinearBvh.comp  compute.glsl  cs.glsl  debug.frag  debug.vert  detectPairs.comp  evenOddSort.comp  fs.frag  fs.glsl  sap.comp  sat.comp  simplePhysicsPipeline.comp  solver.comp  sortLeafNodes.comp  triTriTest.comp  updateAabbs.comp  vs.glsl  vs.vert  vs_instanced.vert
src/: Application.cpp  Application.h  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  ComponentManager.h  ComputeProgram.cpp  ComputeProgram.h  ComputeShaderPrototype.cpp  ComputeShaderPrototype.h  GLSL.cpp  GLSL.h  OpenGLUtils.cpp  OpenGLUtils.h  Program.cpp  Program.h  ProgramPipeline.cpp  ProgramPipeline.h  RenderSystem.cpp  RenderSystem.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  WindowManager.cpp  WindowManager.h  main.cpp  stb_image.h
src/Components/: TransformComponent.h
src/PrototypePhysicsEngine/: AtomicCounter.cpp  AtomicCounter.h  BoundingVolume.h  CMakeLists.txt  ComputeProgram.cpp  ComputeProgram.h  P3BroadPhaseCollisionDetection.cpp  P3BroadPhaseCollisionDetection.h  P3BroadPhaseCommon.h  P3Collider.cpp  P3Collider.h  P3Common.h  P3ConstraintSolver.cpp  P3ConstraintSolver.h  P3CpuBroadPhase.cpp  P3CpuBroadPhase.h  P3CpuNarrowPhase.cpp  P3CpuNarrowPhase.h  P3Dynamics.h  P3DynamicsCommon.h  P3DynamicsWorld.cpp  P3DynamicsWorld.h  P3Epa.cpp  P3Epa.h  P3Gjk.cpp  P3Gjk.h  P3Integrator.cpp  P3Integrator.h  P3NarrowPhaseCollisionDetection.cpp  P3NarrowPhaseCollisionDetection.h  P3NarrowPhaseCommon.h  P3NearPhaseCollisionDetection.cpp  P3NearPhaseCollisionDetection.h  P3OpenGLComputeBroadPhase.cpp  P3OpenGLComputeBroadPhase.h  P3OpenGLComputeNarrowPhase.cpp  P3OpenGLComputeNarrowPhase.h  P3OpenGLComputeSolver.cpp  P3OpenGLComputeSolver.h  P3Sap.cpp  (+7 more)
src/Systems/: RenderSystem.cpp  RenderSystem.h
tests/: fastTriTriUnitTest.cpp
tests/TestStaticLib/: TestStaticLib.vcxproj  TestStaticLib.vcxproj.filters
unit_test/: fastTriTriUnitTest.cpp
