# CMakeList.txt : CMake project for ComputeShaderPrototype, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("ComputeShaderPrototype")

# Add source to this project's executable.
add_executable (ComputeShaderPrototype "ComputeShaderPrototype.cpp" "ComputeShaderPrototype.h")

# TODO: Add tests and install targets if needed.
